Apply suggestion to src/translations/fr/discovery.json

--- a/src/translations/fr/discovery.json
+++ b/src/translations/fr/discovery.json
@@ -8,7 +8,7 @@
     },
     {
       "title": "Rassembler",
-      "description": "Retrouve tous les étudiants de l'ISEP, quelque soit la promotion (étudiant et alumnis). Que ce soit pour stalker (personne n'est parfait) ou pour te faire un réseau (on sait jamais \uD83E\uDD37\u200D♂), tu as l'ISEP à portée de clavier."
+      "description": "Retrouve tous les étudiants de l'ISEP, quelque soit la promotion (étudiant et alumnis). Que ce soit pour stalker (personne n'est parfait) ou pour te faire un réseau (on sait jamais \uD83E\uDD37\u200D♂), tu as l'ISEP à portée de main."
     },
     {
       "title": "Informer",
