--- a/src/translations/en/common.json
+++ b/src/translations/en/common.json
@@ -1,6 +1,7 @@
 {
   "online": "You are back online !",
   "offline": "You are now offline",
+  "error": "Sorry, we've encountered an error, try again later.",
   "end": "You've reached the end !",
   "empty": "Nothing to display",
   "empty_feed": "No posts on this feed yet, come back later !",
