--- a/src/translations/fr/common.json
+++ b/src/translations/fr/common.json
@@ -1,6 +1,7 @@
 {
   "online": "De nouveau connecté !",
   "offline": "Connexion interrompue",
+  "error": "Désolé, y'a eu une erreur, réessaye plus tard",
   "end": "Vous avez tous visionné !",
   "empty": "Rien à afficher",
   "empty_feed": "Aucun post sur ce feed, revenez plus tard !",
