--- a/src/translations/fr/gallery.json
+++ b/src/translations/fr/gallery.json
@@ -26,6 +26,7 @@
   "add_img": "Ajouter",
   "delete_selection": "Supprimer la selection",
   "selection_delete": "Images supprimées avec succès !",
+  "no_gallery": "Aucune galerie par ici...",
   "empty": "Galerie vide...",
   "created": "Galerie créée avec succès !",
   "see_all": "Voir toutes les galeries"
