feat(poll): add date field

--- a/src/translations/en/poll.json
+++ b/src/translations/en/poll.json
@@ -9,5 +9,6 @@
 	"poll_finished": "Poll finished, vote not possible anymore",
 	"vote_updated": "Vote updated",
 	"poll_end": "Poll ends in",
-	"poll_ended": "Poll ended for"
+	"poll_ended": "Poll ended for",
+	"ends_at": "Poll's end date"
 }
