--- a/src/translations/fr/poll.json
+++ b/src/translations/fr/poll.json
@@ -9,5 +9,6 @@
 	"poll_finished": "Sondage terminé, impossible de voter",
 	"vote_updated": "Vote mis à jour",
 	"poll_end": "Sondage se termine dans",
-	"poll_ended": "Sondage terminé depuis"
+	"poll_ended": "Sondage terminé depuis",
+	"ends_at": "Date de fin du sondage"
 }
