Added for upload

--- a/src/translations/fr/common.json
+++ b/src/translations/fr/common.json
@@ -2,7 +2,7 @@
   "online": "De nouveau connecté !",
   "offline": "Connexion interrompue",
   "error": "Désolé, y'a eu une erreur, réessaye plus tard",
-  "end": "Vous avez tous visionné !",
+  "end": "Vous avez tout visionné !",
   "empty": "Rien à afficher",
   "empty_feed": "Aucun post sur ce feed, revenez plus tard !",
   "filters": "Filtres",
