--- a/src/translations/fr/group.json
+++ b/src/translations/fr/group.json
@@ -4,6 +4,10 @@
 	"admins": "Administrateurs",
 	"see_all": "Voir tous les membres +",
 	"see_less": "Voir moins de membres -",
+	"add_member": "Ajouter un membre",
+	"confirm_add": "Ajouter",
+	"member_added": "Membre ajouté au groupe !",
 	"promote_member": "Membre promue !",
+	"member_removed": "Membre retiré du groupe",
 	"demote_member": "Membre retiré des administrateurs"
 }
