--- a/src/translations/fr/event.json
+++ b/src/translations/fr/event.json
@@ -1,6 +1,6 @@
 {
 	"create": {
-		"button": "Créer un évènement",
+		"button": "Nouvel évènement",
 		"title": "Création d'un nouvel évènement",
 		"created": "Évènement créée !"
 	},
