refactor(disovery+club): clean & consistent style

--- a/src/translations/en/discovery.json
+++ b/src/translations/en/discovery.json
@@ -18,5 +18,6 @@
   "placeholder_search": "Search a friend...",
   "promotions": "Choose graduation",
   "yearbook_title": "Students yearbook",
-  "associations": "Associations"
+  "associations": "Associations",
+  "no_student": "No student found, you're too high man"
 }
