--- a/src/translations/fr/user.json
+++ b/src/translations/fr/user.json
@@ -1,7 +1,7 @@
 {
   "bio": "Biographie",
   "no-bio": "Pas de biographie",
-  "clubs": "Clubs",
+  "clubs": "Associations",
   "photos": "Photos",
   "not-specified": "Non renseigné",
   "no-mail": "Aucun mail renseigné",
