style(comment): cleaner comments

--- a/src/translations/en/common.json
+++ b/src/translations/en/common.json
@@ -61,7 +61,7 @@
   "reset": "Reset",
   "write_comment": "Write your comment...",
   "published_at": "published at ",
-  "edited_last_at": "last edited at ",
+  "edited_last_at": "last edited ",
   "pills": {
     "status_archived": "Archived",
     "status_passed": "Passed",
