--- a/src/translations/fr/common.json
+++ b/src/translations/fr/common.json
@@ -61,7 +61,7 @@
   "reset": "Réinitialiser",
   "write_comment": "Ecris ton commentaire...",
   "published_at": "publié à ",
-  "edited_last_at": "dernière modification à ",
+  "edited_last_at": "dernière modification ",
   "pills": {
     "status_archived": "Archivé",
     "status_passed": "Passé",
