--- a/src/translations/fr/common.json
+++ b/src/translations/fr/common.json
@@ -66,5 +66,7 @@
     "status_archived": "Archivé",
     "status_passed": "Passé",
     "status_active": "Actif"
-  }
+  },
+	"yesterday": "hier, à",
+	"just_now": "À l'instant"
 }
