feat(reskin): home new post interface reskin

--- a/src/translations/en/post.json
+++ b/src/translations/en/post.json
@@ -1,5 +1,6 @@
 {
 	"create": "Create a new post",
+	"whatsup": "What's up",
 	"edit": "Edit post",
 	"publication_date": "Publication date",
 	"max_image_reached": "You can't publish more than 5 images"
