feat(trending-comment): added trending comment support

--- a/src/translations/en/post.json
+++ b/src/translations/en/post.json
@@ -5,5 +5,6 @@
 	"publication_date": "Publication date",
 	"max_image_reached": "You can't publish more than 5 images",
 	"response": "response",
-	"respond": "Respond"
+	"respond": "Respond",
+	"see_more_comments": "See more comments"
 }
