--- a/src/translations/fr/post.json
+++ b/src/translations/fr/post.json
@@ -5,5 +5,6 @@
 	"publication_date": "Date de publication",
 	"max_image_reached": "Vous ne pouvez pas publier plus de 5 photos",
 	"response": "réponse",
-	"respond": "Répondre"
+	"respond": "Répondre",
+	"see_more_comments": "Voir plus de commentaires"
 }
