fix(reskin-home): translate "me" in avatar picker

--- a/src/translations/en/common.json
+++ b/src/translations/en/common.json
@@ -68,5 +68,6 @@
     "status_active": "Active"
   },
 	"yesterday": "yesterday,",
-	"just_now": "Just now"
+	"just_now": "Just now",
+  "me": "me"
 }
