--- a/src/translations/fr/common.json
+++ b/src/translations/fr/common.json
@@ -68,5 +68,6 @@
     "status_active": "Actif"
   },
 	"yesterday": "hier, à",
-	"just_now": "À l'instant"
+	"just_now": "À l'instant",
+  "me": "moi"
 }
