feat(club): rework club into tabs

--- a/src/translations/en/common.json
+++ b/src/translations/en/common.json
@@ -55,6 +55,7 @@
   "cancel": "Cancel",
   "setting": "Settings",
   "logout": "Disconnect",
+  "undo": "Undo",
   "save": "Save",
   "delete": "Delete",
   "edit": "Edit",
