--- a/src/translations/fr/common.json
+++ b/src/translations/fr/common.json
@@ -55,6 +55,7 @@
   "cancel": "Annuler",
   "setting": "Paramètres",
   "logout": "Se déconnecter",
+  "undo": "Annuler",
   "save": "Sauvegarder",
   "edit": "Modifier",
   "delete": "Supprimer",
