refactor(club): move toolbar in own component

--- a/src/translations/en/club.json
+++ b/src/translations/en/club.json
@@ -27,5 +27,7 @@
     "ADMIN": "Administrator",
     "PUBLISHER": "Publisher",
     "MEMBER": "Member"
-  }
+  },
+  "member_created": "Member created",
+  "member_updated": "Member updated"
 }
