--- a/src/translations/fr/club.json
+++ b/src/translations/fr/club.json
@@ -27,5 +27,7 @@
     "ADMIN": "Administrateur",
     "PUBLISHER": "Editeur",
     "MEMBER": "Membre"
-  }
+  },
+  "member_created": "Membre ajouté",
+  "member_updated": "Member modifié"
 }
