feat(error): add local error messages

--- a/src/translations/en/error.json
+++ b/src/translations/en/error.json
@@ -1,4 +1,7 @@
 {
-  "disconnected": "You have been disconnected",
+  "online": "You are back online !",
+  "offline": "You are now offline",
+  "user_disconnected": "You have been disconnected",
+  "server_disconnected": "Server unavailable",
   "insufficient_rights": "You have insufficient rights"
 }
