--- a/src/translations/fr/error.json
+++ b/src/translations/fr/error.json
@@ -1,4 +1,7 @@
 {
-  "disconnected": "Vous avez été déconnecté",
+  "online": "De nouveau connecté !",
+  "offline": "Connexion interrompue",
+  "user_disconnected": "Vous avez été déconnecté",
+  "server_disconnected": "Serveur indisponible",
   "insufficient_rights": "Vous n'avez pas les droits suffisants"
 }
