feat(reskin-group): WIP short members list

--- a/src/translations/fr/group.json
+++ b/src/translations/fr/group.json
@@ -4,8 +4,8 @@
 	"admins": "Administrateurs",
 	"restricted": "Groupe privé",
 	"public": "Groupe public",
-	"see_all": "Voir tous les membres +",
-	"see_less": "Voir moins de membres -",
+	"see_all": "Voir plus de membres",
+	"see_less": "Voir moins de membres",
 	"add_member": "Ajouter un membre",
 	"confirm_add": "Ajouter",
 	"member_added": "Membre ajouté au groupe !",
