--- a/src/translations/fr/notification.json
+++ b/src/translations/fr/notification.json
@@ -1,8 +1,9 @@
 {
   "notifications": "Notifications",
   "long_ago": "Il y a longtemps",
+  "see_more": "Voir toutes les notifications",
   "in_menu": {
-    "NEW_STUDENT_POST": "<b\b>{{author_name}}</b\b> a posté une nouvelle publication.",
-    "NEW_CLUB_POST": "<b\b>{{author_name}}</b\b> a posté une nouvelle publication."
+    "NEW_STUDENT_POST": "a posté une nouvelle publication.",
+    "NEW_CLUB_POST": "a posté une nouvelle publication."
   }
 }
