--- a/src/translations/en/notification.json
+++ b/src/translations/en/notification.json
@@ -3,7 +3,7 @@
   "long_ago": "Long ago",
   "see_more": "See all notifications",
   "in_menu": {
-    "NEW_STUDENT_POST": "published a new post.",
-    "NEW_CLUB_POST": "published a new post."
+    "NEW_STUDENT_POST": "<bold>{{author_name}}</bold> published a new post.",
+    "NEW_CLUB_POST": "<bold>{{author_name}}</bold> published a new post."
   }
 }
