--- a/src/translations/fr/notification.json
+++ b/src/translations/fr/notification.json
@@ -3,7 +3,7 @@
   "long_ago": "Il y a longtemps",
   "see_more": "Voir toutes les notifications",
   "in_menu": {
-    "NEW_STUDENT_POST": "a posté une nouvelle publication.",
-    "NEW_CLUB_POST": "a posté une nouvelle publication."
+    "NEW_STUDENT_POST": "<bold>{{author_name}}</bold> a posté une nouvelle publication.",
+    "NEW_CLUB_POST": "<bold>{{author_name}}</bold> a posté une nouvelle publication."
   }
 }
