--- a/src/translations/en/post.json
+++ b/src/translations/en/post.json
@@ -6,5 +6,10 @@
 	"max_image_reached": "You can't publish more than 5 images",
 	"response": "response",
 	"respond": "Respond",
-	"see_more_comments": "See more comments"
+	"see_more_comments": "See more comments",
+	"post_pinned": "Post pinned !",
+	"post_unpinned": "Post unpinned !",
+	"planned_for": "Planned for",
+	"pin": "Pin",
+	"unpin": "Unpin"
 }
