feat(reskin-group): added promote & admins compressed & actions perm fix

--- a/src/translations/fr/group.json
+++ b/src/translations/fr/group.json
@@ -9,7 +9,7 @@
 	"add_member": "Ajouter un membre",
 	"confirm_add": "Ajouter",
 	"member_added": "Membre ajouté au groupe !",
-	"promote_member": "Membre promue !",
+	"promote_member": "Membre promu !",
 	"member_removed": "Membre retiré du groupe",
 	"demote_member": "Membre retiré des administrateurs"
 }
