--- a/src/translations/fr/notification.json
+++ b/src/translations/fr/notification.json
@@ -1,7 +1,7 @@
 {
   "notifications": "Notifications",
   "long_ago": "Il y a longtemps",
-  "see_more": "Voir toutes les notifications",
+  "see_more": "Voir tout",
   "in_menu": {
     "NEW_STUDENT_POST": "<bold>{{author_name}}</bold> a posté une nouvelle publication.",
     "NEW_CLUB_POST": "<bold>{{author_name}}</bold> a posté une nouvelle publication."
