feat(reskin-club): add see all button

--- a/src/translations/en/gallery.json
+++ b/src/translations/en/gallery.json
@@ -29,5 +29,5 @@
   "no_gallery": "No galleries around here...",
   "empty": "This gallery is empty...",
   "created": "Gallery successfully created !",
-  "see_all": "See all galleries"
+  "see_all": "See all"
 }
