--- a/src/translations/fr/gallery.json
+++ b/src/translations/fr/gallery.json
@@ -29,5 +29,5 @@
   "no_gallery": "Aucune galerie par ici...",
   "empty": "Galerie vide...",
   "created": "Galerie créée avec succès !",
-  "see_all": "Voir toutes les galeries"
+  "see_all": "Voir tout"
 }
