feat(reskin-home): support online event & fix mins in dates

--- a/src/translations/en/event.json
+++ b/src/translations/en/event.json
@@ -55,5 +55,6 @@
 	"date": {
 		"same_day_this_week": "{{day}} from {{start}} to {{end}}",
 		"diff_days": "from {{start}} to {{end}}"
-	}
+	},
+	"online": "Online"
 }
