feat(reskin-event): add participate button

--- a/src/translations/en/event.json
+++ b/src/translations/en/event.json
@@ -57,5 +57,6 @@
 		"diff_days": "from {{start}} to {{end}}"
 	},
 	"see_more": "See more...",
-	"online": "Online"
+	"online": "Online",
+	"participate": "Participate"
 }
