fix(reskin-event): fix date

--- a/src/translations/en/event.json
+++ b/src/translations/en/event.json
@@ -54,7 +54,8 @@
 	"ticket_url": "Buy a ticket",
 	"date": {
 		"same_day_this_week": "{{day}} from {{start}} to {{end}}",
-		"diff_days": "from {{start}} to {{end}}"
+		"diff_days": "from {{start}} to {{end}}",
+		"today": "Today"
 	},
 	"see_more": "See more...",
 	"online": "Online",
