--- a/src/translations/fr/event.json
+++ b/src/translations/fr/event.json
@@ -55,7 +55,9 @@
 	"date": {
 		"same_day_this_week": "{{day}} de {{start}} à {{end}}",
 		"diff_days": "du {{start}} au {{end}}",
-		"today": "Aujourd'hui"
+		"today": "Aujourd'hui",
+		"until_same_day": "Maintenant, jusqu'à {{end}}",
+		"until_diff_day": "Actuellement, jusqu'au {{end}}"
 	},
 	"see_more": "Voir plus...",
 	"online": "En ligne",
