feat(reskin-discovery): add missing translations

--- a/src/translations/en/discovery.json
+++ b/src/translations/en/discovery.json
@@ -19,5 +19,10 @@
   "promotions": "Choose graduation",
   "yearbook_title": "Students yearbook",
   "associations": "Associations",
-  "no_student": "No student found, you're too high man"
+  "no_student": "No student found, you're too high man",
+  "my_feed": "My feed",
+  "watch_github": "Watch on GitHub",
+  "student_life": "Student life, simplified",
+  "assos": "Clubs",
+  "students": "Students"
 }
