--- a/src/translations/fr/event.json
+++ b/src/translations/fr/event.json
@@ -57,7 +57,8 @@
 		"diff_days": "du {{start}} au {{end}}",
 		"today": "Aujourd'hui",
 		"until_same_day": "Maintenant, jusqu'à {{end}}",
-		"until_diff_day": "Actuellement, jusqu'au {{end}}"
+		"until_diff_day": "Actuellement, jusqu'au {{end}}",
+		"before": "C'était "
 	},
 	"see_more": "Voir plus...",
 	"online": "En ligne",
