feat(translation): set up all errors translation

--- a/src/translations/en/error.json
+++ b/src/translations/en/error.json
@@ -9,5 +9,35 @@
     "Seems like something broke...",
     "I don't know what you did but it didn't work",
     "You found a bug (source: shitty code)"
-  ]
+  ],
+  "feed_not_found": "This feed doesn't existe",
+  "club_not_found": "This club doesn't existe",
+  "student_not_found": "This student doesn't existe",
+  "event_not_found": "This event doesn't existe",
+  "member_not_found": "This member doesn't existe",
+  "image_not_found": "This image doesn't existe",
+  "media_not_found": "This media doesn't existe",
+  "poll_not_found": "This poll doesn't existe",
+  "student_answer_not_found": "This answer doesn't existe",
+  "post_related_not_found": "This post doesn't existe",
+  "gallery_not_found": "This gallery doesn't existe",
+  "thread_not_found": "This thread doesn't existe",
+  "comment_not_found": "This comment doesn't existe",
+  "authentification_failed": "Authentification failed",
+  "isep_cas_unavailable": "ISEP CAS is unavailable, impossible to login",
+  "refresh_token_expired": "Token expired",
+  "invalid_attachment": "Invalid format of attached file",
+  "student_id_already_exist": "Student id is already taken",
+  "member_already_exist": "Student is already part of club",
+  "minimum_admins_size_required": "Club needs at least 1 administrator",
+  "pseudo_gallery_max_size_reached": "Impossible to attached more than 5 images",
+  "image_already_attached": "Image is already linked to a gallery",
+  "images_not_attached_to_gallery": "Image isn't link to this gallery",
+  "archiving_impossible": "Impossible to archive this group",
+  "deletion_impossible": "Impossible to delete this group",
+  "already_tagged": "Student is already tagged",
+  "poll_finished": "Poll is finished",
+  "choice_already_picked": "Choice already picked",
+  "invalid_embed_type": "Invalid embed type",
+  "fail_deserialize_data": "Failed deserializing data"
 }
