--- a/src/translations/fr/error.json
+++ b/src/translations/fr/error.json
@@ -10,5 +10,36 @@
     "Une erreur a été rencontrée...",
     "Bon bah ca n'a pas marché...",
     "Un problème a été rencontré (source: code de merde)"
-  ]
+  ],
+  "feed_not_found": "Ce feed n'existe pas",
+  "club_not_found": "Cette association n'existe pas",
+  "student_not_found": "Cet élève n'existe pas",
+  "event_not_found": "Cet event n'existe pas",
+  "member_not_found": "Ce membre n'existe pas",
+  "image_not_found": "Cette image n'existe pas",
+  "media_not_found": "Ce media n'existe pas",
+  "poll_not_found": "Ce sondage n'existe pas",
+  "student_answer_not_found": "Cet réponse n'existe pas",
+  "post_related_not_found": "Ce poste n'existe pas",
+  "gallery_not_found": "Cette galerie n'existe pas",
+  "thread_not_found": "Cette thread n'existe pas",
+  "comment_not_found": "Ce commentaire n'existe pas",
+  "authentification_failed": "Echec d'authentification (sorry hacker)",
+  "isep_cas_unavailable": "Impossible d'accéder au service CAS de l'ISEP, échec d'authentification ",
+  "refresh_token_expired": "Expiration du token",
+  "invalid_attachment": "Format de fichier invalide",
+  "student_id_already_exist": "L'identifiant de cet élève est déjà utilisé",
+  "member_already_exist": "L'élève fait déjà partie de l'association",
+  "minimum_admins_size_required": "L'association doit posséder un administrateur",
+  "pseudo_gallery_max_size_reached": "Impossible d'attacher plus de 5 images",
+  "image_already_attached": "L'image est déjà relié à une galerie",
+  "images_not_attached_to_gallery": "L'image n'est pas relié à cette galerie",
+  "archiving_impossible": "Impossible d'archiver ce groupe",
+  "deletion_impossible": "Impossible de supprimer ce groupe",
+  "already_tagged": "L'utilisateur est déjà identifié",
+  "poll_finished": "Le sondage est terminé",
+  "choice_already_picked": "Vous avez déjà voté",
+  "invalid_embed_type": "Type d'attachement renseigné invalid",
+  "fail_deserialize_data": "Impossible de traduire la requête",
+  "fail_serialize_data": "Impossible de traduire la requête"
 }
