feat(translation): add "Publications" translation

--- a/src/translations/fr/common.json
+++ b/src/translations/fr/common.json
@@ -2,6 +2,7 @@
   "error": "Désolé, y'a eu une erreur, réessaye plus tard",
   "end": "Vous avez tout visionné !",
   "empty": "Rien à afficher",
+  "posts": "Publications",
   "empty_feed": "Aucun post sur ce feed, revenez plus tard !",
   "filters": "Filtres",
   "administration": "Administration",
