Apply 1 suggestion(s) to 1 file(s)

--- a/src/translations/en/error.json
+++ b/src/translations/en/error.json
@@ -10,19 +10,19 @@
     "I don't know what you did but it didn't work",
     "You found a bug (source: shitty code)"
   ],
-  "feed_not_found": "This feed doesn't existe",
-  "club_not_found": "This club doesn't existe",
-  "student_not_found": "This student doesn't existe",
-  "event_not_found": "This event doesn't existe",
-  "member_not_found": "This member doesn't existe",
-  "image_not_found": "This image doesn't existe",
-  "media_not_found": "This media doesn't existe",
-  "poll_not_found": "This poll doesn't existe",
-  "student_answer_not_found": "This answer doesn't existe",
-  "post_related_not_found": "This post doesn't existe",
-  "gallery_not_found": "This gallery doesn't existe",
-  "thread_not_found": "This thread doesn't existe",
-  "comment_not_found": "This comment doesn't existe",
+  "feed_not_found": "This feed doesn't exist",
+  "club_not_found": "This club doesn't exist",
+  "student_not_found": "This student doesn't exist",
+  "event_not_found": "This event doesn't exist",
+  "member_not_found": "This member doesn't exist",
+  "image_not_found": "This image doesn't exist",
+  "media_not_found": "This media doesn't exist",
+  "poll_not_found": "This poll doesn't exist",
+  "student_answer_not_found": "This answer doesn't exist",
+  "post_related_not_found": "This post doesn't exist",
+  "gallery_not_found": "This gallery doesn't exist",
+  "thread_not_found": "This thread doesn't exist",
+  "comment_not_found": "This comment doesn't exist",
   "authentification_failed": "Authentification failed",
   "isep_cas_unavailable": "ISEP CAS is unavailable, impossible to login",
   "refresh_token_expired": "Token expired",
