--- a/src/translations/fr/error.json
+++ b/src/translations/fr/error.json
@@ -19,7 +19,7 @@
   "image_not_found": "Cette image n'existe pas",
   "media_not_found": "Ce media n'existe pas",
   "poll_not_found": "Ce sondage n'existe pas",
-  "student_answer_not_found": "Cet réponse n'existe pas",
+  "student_answer_not_found": "Cette réponse n'existe pas",
   "post_related_not_found": "Ce poste n'existe pas",
   "gallery_not_found": "Cette galerie n'existe pas",
   "thread_not_found": "Cette thread n'existe pas",
