Apply 1 suggestion(s) to 1 file(s)

--- a/src/translations/fr/error.json
+++ b/src/translations/fr/error.json
@@ -14,7 +14,7 @@
   "feed_not_found": "Ce feed n'existe pas",
   "club_not_found": "Cette association n'existe pas",
   "student_not_found": "Cet élève n'existe pas",
-  "event_not_found": "Cet event n'existe pas",
+  "event_not_found": "Cet événement n'existe pas",
   "member_not_found": "Ce membre n'existe pas",
   "image_not_found": "Cette image n'existe pas",
   "media_not_found": "Ce media n'existe pas",
