--- a/src/translations/en/post.json
+++ b/src/translations/en/post.json
@@ -12,5 +12,6 @@
 	"planned_for": "Planned for",
 	"pin": "Pin",
 	"unpin": "Unpin",
-	"posted_in_group": "Posted in the \"{{group}}\" group"
+	"posted_in_group": "Posted in the \"{{group}}\" group",
+	"posted_in_event": "Posted in the \"{{event}}\" event feed"
 }
