fix(event): fix feed selector and update endpoint url

--- a/src/translations/en/common.json
+++ b/src/translations/en/common.json
@@ -74,5 +74,6 @@
     "subscribed": "Followed",
     "unsubscribe": "Unfollow"
   },
+  "no_targets": "No targets (Public event)",
   "retry": "Retry"
 }
