feat(realtime): impl websocket disconnect reconnect support (+ in feed)

--- a/src/translations/en/post.json
+++ b/src/translations/en/post.json
@@ -13,5 +13,7 @@
 	"pin": "Pin",
 	"unpin": "Unpin",
 	"posted_in_group": "Posted in the \"{{group}}\" group",
-	"posted_in_event": "Posted in the \"{{event}}\" event feed"
+	"posted_in_event": "Posted in the \"{{event}}\" event feed",
+		"full_reload": "Load new posts",
+		"new_posts": "{{toLoad}} new posts"
 }
